--- a/ranked-webapp/src/main/webapp/partials/disciplineList.html
+++ b/ranked-webapp/src/main/webapp/partials/disciplineList.html
@@ -2,7 +2,7 @@
     <ul class="thumbnails">
         <li class="span2" ng-repeat="discipline in disciplines">
             <a class="thumbnail"
-               href="#">
+               href="#/discipline/{{discipline.id}}">
 
                 <strong>{{discipline.name}}</strong><br/>
                 ID:{{discipline.id}}
