--- a/ranked-webapp/src/main/webapp/partials/tournamentList.html
+++ b/ranked-webapp/src/main/webapp/partials/tournamentList.html
@@ -2,7 +2,7 @@
     <ul class="thumbnails">
         <li class="span2" ng-repeat="tournament in tournaments">
             <a class="thumbnail"
-               href="#">
+               href="#/tournament/{{tournament.id}}">
 
                 <strong>{{tournament.name}}</strong><br/>
                 ID:{{tournament.id}}<br/>
