--- a/ranked-webapp/src/main/webapp/partials/playerList.html
+++ b/ranked-webapp/src/main/webapp/partials/playerList.html
@@ -2,8 +2,8 @@
     <ul class="thumbnails">
         <li class="span2" ng-repeat="player in players">
             <a class="thumbnail"
-               href="#">
-
+               href="#/player/{{player.id}}">
+                <img ngSrc="https://wiki.holisticon.de/download/thumbnails/884740/pic_{{player.name}}_8x8.jpg" width="150" height="150"/>
                 <strong>{{player.name}}</strong><br/>
                 ID:{{player.id}}
 
