--- a/ranked-webapp/src/main/webapp/partials/playerList.html
+++ b/ranked-webapp/src/main/webapp/partials/playerList.html
@@ -3,7 +3,7 @@
         <li class="span2" ng-repeat="player in players">
             <a class="thumbnail"
                href="#/player/{{player.id}}">
-                <img ngSrc="https://wiki.holisticon.de/download/thumbnails/884740/pic_{{player.name}}_8x8.jpg" width="150" height="150"/>
+                <img ng-src="https://wiki.holisticon.de/download/thumbnails/884740/pic_{{player.name}}_8x8.jpg" width="120" height="120" class="img-rounded" />
                 <strong>{{player.name}}</strong><br/>
                 ID:{{player.id}}
 
