--- a/ranked-webapp/src/main/webapp/partials/tournamentList.html
+++ b/ranked-webapp/src/main/webapp/partials/tournamentList.html
@@ -1,6 +1,6 @@
 <div class="container">
     <ul class="thumbnails">
-        <li class="span2" ng-repeat="tournament in tournaments">
+        <li class="span2" ng:repeat="tournament in tournaments">
             <a class="thumbnail"
                href="#/tournament/{{tournament.id}}">
 
