--- a/ranked-webapp/src/main/webapp/partials/playerDetail.html
+++ b/ranked-webapp/src/main/webapp/partials/playerDetail.html
@@ -1,9 +1,9 @@
 <div class="container">
 
-    <img ng-src="" width="120" height="120" class="img-rounded"/>
-    <strong>{{player.name}}</strong><br/>
-    ID:{{player.id}}
-    <li class="span2" ng-repeat="team in player.teams">
+    <img ng:src="https://wiki.holisticon.de/download/thumbnails/884740/pic_{{player.name}}_8x8.jpg" width="120" height="120" class="img-rounded"/>
+    <br/><strong>{{player.name}}</strong><br/>
+    ID: {{player.id}}
+    <li class="span2" ng:repeat="team in player.teams">
 
     </li>
 
