--- a/backend/view/pom.xml
+++ b/backend/view/pom.xml
@@ -27,14 +27,12 @@
       <groupId>${project.groupId}</groupId>
       <artifactId>ranked-axon</artifactId>
     </dependency>
+
     <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-web</artifactId>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-web</artifactId>
     </dependency>
-    <dependency>
-      <groupId>io.springfox</groupId>
-      <artifactId>springfox-swagger2</artifactId>
-    </dependency>
+
   </dependencies>
 
 
