--- a/frontend/src/main/resources/templates/index.html
+++ b/frontend/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html>
 <head lang="en">
   <meta charset="UTF-8"/>
   <title>#Ranked</title>
