--- a/frontend/src/main/resources/templates/index.html
+++ b/frontend/src/main/resources/templates/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
-<html>
-<head lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
+<head lang="de">
   <meta charset="UTF-8"/>
+  <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no">
   <title>#Ranked</title>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="main.css" rel="stylesheet">
 </head>
 <body>
 
