--- a/frontend/src/main/resources/static/main.css
+++ b/frontend/src/main/resources/static/main.css
@@ -3,13 +3,13 @@ html, body {
   width: 100%;
   padding: 0;
   margin: 0;
+  font-size: 18px;
 }
 
 .ranked {
   background-color: pink;
   height: 100vh;
   width: 100%;
-  font-size: 2rem;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
@@ -37,7 +37,7 @@ html, body {
 
 .match .goal-counter {
   padding: 20px;
-  font-size: 5rem;
+  font-size: 7rem;
   width: 100%;
   box-sizing: border-box;
   text-align: center;
@@ -58,19 +58,67 @@ html, body {
   position: absolute;
   bottom: 0.4rem;
   text-align: center;
-  opacity: 0.4;
 }
 
 .match .add-defense {
-  left: 20%;
+  left: 10%;
 }
 
 .match .add-attack {
-  right: 20%;
+  right: 10%;
+}
+
+.match .add-defense .material-icons, .match .add-attack .material-icons {
+  opacity: 0.4;
+  font-size: 3rem;
+}
+
+.match .add-defense .player-icon, .match .add-attack .player-icon {
+  width: 100%;
+  min-width: 4.5rem;
+  height: 4.5rem;
 }
 
 .match .add-defense .name, .match .add-attack .name {
-  font-size: 40%;
+  opacity: 0.4;
   display: block;
-  margin: -0.5rem 0 0 0;
+}
+
+/* Player selection */
+.player-selection {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: #ffffff;
+  z-index: 999;
+  overflow: auto;
+  padding: 5%;
+  box-sizing: border-box;
+}
+
+.player-selection.hidden {
+  visibility: hidden;
+  display: none;
+}
+
+.player-selection .player-icon {
+  width: 20%;
+  height: auto;
+  float: left;
+  margin: 0 0 4% 4%;
+}
+
+.player-icon .player-image {
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center top;
+  width: 100%;
+  height: 100%;
+}
+
+.player-selection .player-icon .player-image {
+  height: auto;
+  padding: 50% 0;
 }
