--- a/frontend/src/main/resources/static/main.css
+++ b/frontend/src/main/resources/static/main.css
@@ -24,6 +24,8 @@ html, body {
   width: 100%;
   position: relative;
   background-image: radial-gradient(#ffffff 0%, transparent 100%);
+  border-top: 0.2rem solid white;
+  box-sizing: border-box;
 }
 
 .match .team-blue {
@@ -92,6 +94,32 @@ html, body {
 .match .add-defense .name, .match .add-attack .name {
   opacity: 0.4;
   display: block;
+}
+
+.setcounter {
+  border-radius: 50%;
+  width: 20%;
+  height: 6%;
+  position: fixed;
+  z-index: 10;
+  left: 40%;
+  top: 47%;
+  background: white;
+}
+
+.setcounter > div {
+  width: 100%;
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.setcounter > div > span {
+  transform: rotate(90deg);
+  display: inline-block;
+  font-size: 3rem;
+  opacity: 0.4;
 }
 
 /* Player selection */
