--- a/frontend/src/main/resources/static/main.css
+++ b/frontend/src/main/resources/static/main.css
@@ -162,6 +162,10 @@ html, body {
   box-sizing: border-box;
 }
 
+.player-selection.upside-down {
+  transform: rotate(180deg);
+}
+
 .player-selection .player-icon, .player-selection .letter {
   width: 24%;
   height: auto;
