--- a/backend/application/src/main/resources/templates/create-match.html
+++ b/backend/application/src/main/resources/templates/create-match.html
@@ -1,44 +1,81 @@
 <html>
+<header>
+  <meta charset="UTF-8"></meta>
+  <title>ranked create match</title>
+
+  <script src="https://code.jquery.com/jquery-3.2.1.js"
+          integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
+          crossorigin="anonymous"></script>
+
+  <!-- Latest compiled and minified CSS & JS -->
+  <link rel="stylesheet" media="screen" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+</header>
 <body>
-<form action="#" th:action="@{/}" th:object="${createMatchForm}" method="post">
-  <table>
-    <tr>
-      <th>Team Red:</th>
-      <td colspan="2">r1:<select th:field="*{red1}"><option th:each="player : ${players}" th:value="${player.userName}" th:text="${player.displayName}">Player</option></select></td>
-      <td colspan="2">r2:<select th:field="*{red2}"><option th:each="player : ${players}" th:value="${player.userName}" th:text="${player.displayName}">Player</option></select></td>
-    </tr>
-    <tr>
-      <th>Team Blue:</th>
-      <td colspan="2">b1:<select th:field="*{blue1}"><option th:each="player : ${players}" th:value="${player.userName}" th:text="${player.displayName}">Player</option></select></td>
-      <td colspan="2">b2:<select th:field="*{blue2}"><option th:each="player : ${players}" th:value="${player.userName}" th:text="${player.displayName}">Player</option></select></td>
-    </tr>
+<div class="jumbotron">
+  <div class="container">
+    <form action="#" th:action="@{/}" th:object="${createMatchForm}" method="post">
+      <div class="row">
+        <table>
+          <tr>
+            <th>Team Red</th>
+            <td colspan="2">1: <select th:field="*{red1}">
+              <option th:each="player : ${players}" th:value="${player.userName}" th:text="${player.displayName}">Player</option>
+            </select></td>
+            <td colspan="2">2: <select th:field="*{red2}">
+              <option th:each="player : ${players}" th:value="${player.userName}" th:text="${player.displayName}">Player</option>
+            </select></td>
+          </tr>
+          <tr>
+            <th>Team Blue</th>
+            <td colspan="2">1: <select th:field="*{blue1}">
+              <option th:each="player : ${players}" th:value="${player.userName}" th:text="${player.displayName}">Player</option>
+            </select></td>
+            <td colspan="2"> 2: <select th:field="*{blue2}">
+              <option th:each="player : ${players}" th:value="${player.userName}" th:text="${player.displayName}">Player</option>
+            </select></td>
+          </tr>
 
-    <tr>
-      <th>Set 1:</th>
-      <td>Goals Red:<input type="text" th:field="*{goalsRed1}" /></td>
-      <td>Goals Blue:<input type="text" th:field="*{goalsBlue1}" /></td>
-      <td>Offense Red: <select th:field="*{offenseRed1}"><option th:each="player : ${players}" th:value="${player.userName}" th:text="${player.displayName}">Player</option></select></td>
-      <td>Offense Blue: <select th:field="*{offenseBlue1}"><option th:each="player : ${players}" th:value="${player.userName}" th:text="${player.displayName}">Player</option></select></td>
-    </tr>
-    <tr>
-      <th>Set 2:</th>
-      <td>Goals Red:<input type="text" th:field="*{goalsRed2}" /></td>
-      <td>Goals Blue:<input type="text" th:field="*{goalsBlue2}" /></td>
-      <td>Offense Red: <select th:field="*{offenseRed2}"><option th:each="player : ${players}" th:value="${player.userName}" th:text="${player.displayName}">Player</option></select></td>
-      <td>Offense Blue: <select th:field="*{offenseBlue2}"><option th:each="player : ${players}" th:value="${player.userName}" th:text="${player.displayName}">Player</option></select></td>
-    </tr>
-    <tr>
-      <th>Set 3:</th>
-      <td>Goals Red:<input type="text" th:field="*{goalsRed3}" /></td>
-      <td>Goals Blue:<input type="text" th:field="*{goalsBlue3}" /></td>
-      <td>Offense Red: <select th:field="*{offenseRed3}"><option th:each="player : ${players}" th:value="${player.userName}" th:text="${player.displayName}">Player</option></select></td>
-      <td>Offense Blue: <select th:field="*{offenseBlue3}"><option th:each="player : ${players}" th:value="${player.userName}" th:text="${player.displayName}">Player</option></select></td>
-    </tr>
-
-    <tr>
-      <td><button type="submit">Submit</button></td>
-    </tr>
-  </table>
-</form>
+          <tr>
+            <th>Set 1:</th>
+            <td>Goals Red:<input type="text" th:field="*{goalsRed1}"/></td>
+            <td>Goals Blue:<input type="text" th:field="*{goalsBlue1}"/></td>
+            <td>Offense Red: <select th:field="*{offenseRed1}">
+              <option th:each="player : ${players}" th:value="${player.userName}" th:text="${player.displayName}">Player</option>
+            </select></td>
+            <td>Offense Blue: <select th:field="*{offenseBlue1}">
+              <option th:each="player : ${players}" th:value="${player.userName}" th:text="${player.displayName}">Player</option>
+            </select></td>
+          </tr>
+          <tr>
+            <th>Set 2:</th>
+            <td>Goals Red:<input type="text" th:field="*{goalsRed2}"/></td>
+            <td>Goals Blue:<input type="text" th:field="*{goalsBlue2}"/></td>
+            <td>Offense Red: <select th:field="*{offenseRed2}">
+              <option th:each="player : ${players}" th:value="${player.userName}" th:text="${player.displayName}">Player</option>
+            </select></td>
+            <td>Offense Blue: <select th:field="*{offenseBlue2}">
+              <option th:each="player : ${players}" th:value="${player.userName}" th:text="${player.displayName}">Player</option>
+            </select></td>
+          </tr>
+          <tr>
+            <th>Set 3:</th>
+            <td>Goals Red:<input type="text" th:field="*{goalsRed3}"/></td>
+            <td>Goals Blue:<input type="text" th:field="*{goalsBlue3}"/></td>
+            <td>Offense Red: <select th:field="*{offenseRed3}">
+              <option th:each="player : ${players}" th:value="${player.userName}" th:text="${player.displayName}">Player</option>
+            </select></td>
+            <td>Offense Blue: <select th:field="*{offenseBlue3}">
+              <option th:each="player : ${players}" th:value="${player.userName}" th:text="${player.displayName}">Player</option>
+            </select></td>
+          </tr>
+        </table>
+      </div>
+      <div class="row">
+        <button type="submit" class="btn btn-primary">Submit</button>
+      </div>
+    </form>
+  </div>
+</div>
 </body>
 </html>
