--- a/frontend/src/main/js/app.css
+++ b/frontend/src/main/js/app.css
@@ -6,6 +6,11 @@ html, body {
   font-size: 18px;
 }
 
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
 .ranked {
   background-color: pink;
   height: 100vh;
