--- a/frontend/src/main/js/components/player-icon.css
+++ b/frontend/src/main/js/components/player-icon.css
@@ -4,11 +4,42 @@
 }
 
 .player-icon .player-image {
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center top;
   width: 100%;
   height: 100%;
+  position: relative;
+}
+
+.player-icon .player-image > * {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
+.player-icon .player-image .placeholder {
+  box-sizing: border-box;
+  width: 70%;
+  height: 0;
+  margin: auto;
+  padding: 35% 0;
+  background-color: rgba(0, 0, 0, 0.15);
+  color: rgba(0, 0, 0, 0.4);
+  border-radius: 50% 0 50% 50%;
+}
+
+.player-icon .player-image .placeholder span {
+  font-size: 1.6rem;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.player-icon .player-image img {
+  max-width: 100%;
+  max-height: 100%;
+  margin: auto;
 }
 
 .player-icon .player-image .material-icons {
