--- a/frontend/src/main/js/pages/score-board.css
+++ b/frontend/src/main/js/pages/score-board.css
@@ -47,6 +47,25 @@
   padding-top: 8rem;
   position: relative;
   display: inline-block;
+  text-align: center;
+}
+
+@media (min-width: 1000px) {
+  .ranking-list {
+    column-count: 2;
+    column-rule: 0.1rem solid rgba(0, 0, 0, 0.3);
+    padding-left: 5rem;
+    padding-right: 5rem;
+  }
+}
+
+@media (min-width: 1500px) {
+  .ranking-list {
+    column-count: 3;
+    column-rule: 0.1rem solid rgba(0, 0, 0, 0.3);
+    padding-left: 5rem;
+    padding-right: 5rem;
+  }
 }
 
 .ranking-list .fading-top {
@@ -65,6 +84,8 @@
   position: relative;
   display: inline-block;
   box-sizing: border-box;
+  max-width: 700px;
+  text-align: left;
 }
 
 .ranking-entry .icon {
@@ -75,7 +96,7 @@
 
 .ranking-entry .name {
   float: left;
-  clear: right;
+  width: 83%;
 }
 
 .ranking-entry .bar {
