--- a/frontend/src/main/js/pages/score-board.css
+++ b/frontend/src/main/js/pages/score-board.css
@@ -73,7 +73,7 @@
   width: 100%;
   position: fixed;
   top: 4rem;
-  background: linear-gradient(0deg, transparent 0%, white 50%);
+  background: linear-gradient(0deg, rgba(255, 255, 255, 0.01) 0%, white 50%);
   z-index: 2;
 }
 
