Implemented Carousel and second statistic

--- a/frontend/src/main/js/components/player-icon.css
+++ b/frontend/src/main/js/components/player-icon.css
@@ -37,6 +37,8 @@
 }
 
 .player-icon .player-image img {
+  width: auto!important;
+  height: auto;
   max-width: 100%;
   max-height: 100%;
   margin: auto;
