--- a/frontend/src/main/js/statistics/pages/score-board.css
+++ b/frontend/src/main/js/statistics/pages/score-board.css
@@ -49,7 +49,7 @@
   position: relative;
   display: inline-block;
   text-align: center;
-  background-color: white;
+  height: 100vh;
 }
 
 @media (min-width: 1000px) {
@@ -81,4 +81,8 @@
 
 .carousel .control-dots .dot {
   background: #FF2D55 !important;
+}
+
+.carousel .slide {
+  background: white !important;
 }
