Refined team selection styling

--- a/frontend/src/main/js/game/pages/team-selection.css
+++ b/frontend/src/main/js/game/pages/team-selection.css
@@ -3,7 +3,11 @@
 }
 
 .team-entry {
-  padding: 1.5rem 0rem;
-  text-align: center;
-  border-bottom: 1px solid lightgray;
+  font-size: 1.5rem;
+  padding: 2rem 0rem 2rem 1rem;
+  text-align: left;
+}
+
+.team-name {
+  margin-left: 1rem;
 }
