--- a/frontend/src/main/js/game/pages/player-selection.css
+++ b/frontend/src/main/js/game/pages/player-selection.css
@@ -11,11 +11,24 @@
   box-sizing: border-box;
 }
 
+@media (orientation: landscape) {
+  .player-selection {
+    padding: 3% 0;
+  }
+}
+
 .player-selection .player-icon, .player-selection .letter {
   width: 24%;
   height: auto;
   float: left;
   margin: 0 0 5% 7%;
+}
+
+@media (orientation: landscape) {
+  .player-selection .player-icon, .player-selection .letter {
+    width: 14%;
+    margin: 0 0 3% 5%;
+  }
 }
 
 .player-selection .player-icon .player-image, .player-selection .letter .letter-content {
@@ -34,4 +47,10 @@
   top: 0;
   left: 50%;
   transform: translateX(-50%);
+}
+
+@media (orientation: landscape) {
+  .player-selection .letter .letter-absolute {
+    font-size: 14vw;
+  }
 }
