Fixed styling for two side bar chart

--- a/frontend/src/main/js/statistics/components/two-side-bar-chart.css
+++ b/frontend/src/main/js/statistics/components/two-side-bar-chart.css
@@ -9,19 +9,37 @@
   text-align: left;
 }
 
+.two-side-bar-entry > .player-icon {
+  float: left;
+  width: 9%;
+  margin-right: 3%;
+  height: 3rem;
+}
+
 .two-side-bar-entry .name {
   float: left;
-  width: 100%;
+  width: 68%;
 }
 
 .two-side-bar-entry .negative-bar, .two-side-bar-entry .positive-bar {
   float: left;
-  width: 40%;
+  width: 44%;
   height: 1rem;
+  position: relative;
+  margin-top: 0.5rem;
+  box-sizing: border-box;
+  line-height: 1rem;
+  vertical-align: middle;
 }
 
-.two-side-bar-entry .negative-bar, .two-side-bar-entry .positive-bar {
-  position: relative;
+.two-side-bar-entry .negative-bar {
+  border-right: 0.08rem solid white;
+  padding-left: 2.5rem;
+}
+
+.two-side-bar-entry .positive-bar {
+  border-left: 0.08rem solid white;
+  padding-right: 2.5rem;
 }
 
 .two-side-bar-entry .bar-inner {
@@ -31,6 +49,7 @@
 .two-side-bar-entry .negative-bar .bar-inner {
   background-color: #FF2D55;
   float: right;
+
 }
 
 .two-side-bar-entry .positive-bar .bar-inner {
@@ -39,18 +58,27 @@
 }
 
 .two-side-bar-entry .bar-value {
-  position: absolute;
-  max-width: 100%;
+  width: 2.5rem;
+  font-size: 0.8rem;
   box-sizing: border-box;
-  display: none; /* TODO: how to fix this styling issue? */
 }
 
 .two-side-bar-entry .negative-bar .bar-value {
-  right: 0;
+  float: right;
+  margin-right: -2.5rem;
+  padding-right: 0.1rem;
+  text-align: right;
+  position: relative;
+  left: -2.5rem;
 }
 
 .two-side-bar-entry .positive-bar .bar-value {
-  left: 0;
+  float: left;
+  margin-left: -2.5rem;
+  padding-left: 0.1rem;
+  text-align: left;
+  position: relative;
+  right: -2.5rem;
 }
 
 .two-side-bar-entry .cumulation {
