Added team image url to data model

--- a/frontend/src/main/js/game/pages/match.css
+++ b/frontend/src/main/js/game/pages/match.css
@@ -110,6 +110,10 @@
   font-size: 2rem;
 }
 
+.match .add-team img {
+  height: 5rem;
+}
+
 .match .add-team .team-name {
   font-size: 1.2rem;
   opacity: 0.4;
