--- a/frontend/src/main/js/tournament/pages/tournament-tree.css
+++ b/frontend/src/main/js/tournament/pages/tournament-tree.css
@@ -132,10 +132,35 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  width: 85%;
+  text-align: center;
+  max-height: 100%;
+}
+
+.tournament-match .team-name {
+  max-width: 100%;
+  position: relative;
+  height: 40%;
+  padding-left: 2rem;
+  display: inline-block;
 }
 
 .tournament-match .team-name.winner {
   font-weight: 700;
+}
+
+
+.tournament-match .team-name .image-container {
+  position: absolute;
+  left: 0;
+  top: 50%;
+  width: 2rem;
+  height: 1.7rem;
+  transform: translateY(-50%);
+}
+
+.tournament-match .team-name .name-container {
+  word-wrap: break-word;
 }
 
 .tournament-match .separator {
@@ -144,6 +169,7 @@
   display: inline-block;
   font-size: 0.8rem;
   margin: 0.1rem 0;
+  height: 20%;
 }
 
 .tournament-match .separator::before, .tournament-match .separator::after {
@@ -172,8 +198,7 @@
 }
 
 .last-16 .tournament-match {
-  width: 19%;
-  padding: 0 3%;
+  width: 25%;
 }
 
 .last-16 .tournament-match::before {
@@ -191,11 +216,10 @@
 }
 
 .quarter-finals .tournament-match {
-  width: 40%;
-  padding: 0 5%;
+  width: 50%;
 }
 
-.semi-finals .tournament-match .separator {
+.quarter-finals .tournament-match .separator {
   margin: 0.2rem 0;
 }
 
@@ -233,19 +257,44 @@
 
 .final .final-match {
   height: 15vh;
-  width: 15vh;
+  width: 40vh;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background: radial-gradient(circle closest-side, white 80%, transparent);
+  background: radial-gradient(ellipse closest-side, white 80%, transparent);
 }
 
 .final .tournament-match {
   width: 100%;
   height: 100%;
   box-sizing: border-box;
-  background-image: url('/img/baywreath.png');
+}
+
+.final .tournament-match .opponents {
+  width: 65%;
+}
+
+.final .final-match::before {
+  content: "";
+  display: inline-block;
+  position: absolute;
+  left: 0;
+  height: 100%;
+  width: 5rem;
+  background-image: url('/img/baywreath_left.png');
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+}
+
+.final .final-match::after {
+  content: "";
+  display: inline-block;
+  position: absolute;
+  right: 0;
+  height: 100%;
+  width: 5rem;
+  background-image: url('/img/baywreath_right.png');
   background-size: 100% 100%;
   background-repeat: no-repeat;
 }
@@ -254,6 +303,6 @@
   content: none;
 }
 
-.semi-finals .tournament-match .separator {
+.final .tournament-match .separator {
   margin: 0.4rem 0;
 }
