--- a/frontend/src/main/js/tournament/pages/tournament-tree.css
+++ b/frontend/src/main/js/tournament/pages/tournament-tree.css
@@ -65,18 +65,9 @@
   border-bottom-width: 1px;
 }
 
-.tournament-tree .top .tournament-match.next-round-winner::after {
-  border-bottom-width: 3px;
-  width: calc(50% + 2px);
-}
-
 .tournament-tree .bottom .tournament-match::after {
   top: -2.5vh;
   border-top-width: 1px;
-}
-
-.tournament-tree .bottom .tournament-match.next-round-winner::after {
-  border-top-width: 3px;
 }
 
 .tournament-match:nth-child(odd)::after {
@@ -84,19 +75,9 @@
   border-left-width: 1px;
 }
 
-.tournament-match.next-round-winner:nth-child(odd)::after {
-  left: calc(50% - 2px);
-  border-left-width: 3px;
-}
-
 .tournament-match:nth-child(even)::after {
   right: calc(50% - 1px);
   border-right-width: 1px;
-}
-
-.tournament-match.next-round-winner:nth-child(even)::after {
-  right: calc(50% - 2px);
-  border-right-width: 3px;
 }
 
 .tournament-match::before {
@@ -106,10 +87,6 @@
   height: 1rem;
   display: inline-block;
   position: absolute;
-}
-
-.tournament-match.decided::before {
-  width: 3px;
 }
 
 .tournament-tree .top .tournament-match::before {
@@ -256,8 +233,8 @@
 }
 
 .final .final-match {
-  height: 15vh;
-  width: 40vh;
+  height: 18vh;
+  width: 45vh;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -266,9 +243,12 @@
 }
 
 .final .tournament-match {
-  width: 100%;
-  height: 100%;
+  width: 80%;
+  height: 80%;
   box-sizing: border-box;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .final .tournament-match .opponents {
@@ -280,7 +260,8 @@
   display: inline-block;
   position: absolute;
   left: 0;
-  height: 100%;
+  top: 5%;
+  height: 80%;
   width: 5rem;
   background-image: url('/img/baywreath_left.png');
   background-size: 100% 100%;
@@ -292,7 +273,8 @@
   display: inline-block;
   position: absolute;
   right: 0;
-  height: 100%;
+  top: 5%;
+  height: 80%;
   width: 5rem;
   background-image: url('/img/baywreath_right.png');
   background-size: 100% 100%;
