--- a/frontend/src/main/js/game/pages/match-selection.css
+++ b/frontend/src/main/js/game/pages/match-selection.css
@@ -34,18 +34,66 @@
   right: 0;
 }
 
-.match-selection .tournament-finished .text {
-  text-align: justify;
-  margin: 2rem;
-  font-size: 1.3rem;
+.match-selection .tournament-finished {
+  position: fixed;
+  width: 100%;
+  height: 100%;
 }
 
-.match-selection .tournament-finished .link {
-  border-radius: 0.5rem;
-  background-color: #43A843;
-  margin: 2rem;
+.match-selection .tournament-finished .winner-container {
+  height: 15rem;
+  width: calc(100% - 2rem);
+  position: absolute;
+  top: calc(50% - 7.5rem);
+  left: 1rem;
+}
+
+.match-selection .tournament-finished .winner-container::before {
+  content: "";
+  display: inline-block;
+  position: absolute;
+  left: 0;
+  top: 5%;
+  height: 80%;
+  width: 5rem;
+  background-image: url('/img/baywreath_left.png');
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+}
+
+.match-selection .tournament-finished .winner-container::after {
+  content: "";
+  display: inline-block;
+  position: absolute;
+  right: 0;
+  top: 5%;
+  height: 80%;
+  width: 5rem;
+  background-image: url('/img/baywreath_right.png');
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+}
+
+.match-selection .tournament-finished .winner {
+  display: inline-block;
   text-align: center;
-  padding: 0.5rem 0;
-  color: #F8F8F8;
-  display: block;
+  position: relative;
+  padding-left: 4rem;
+  box-sizing: border-box;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.match-selection .tournament-finished .image-container {
+  position: absolute;
+  left: 0;
+  top: 50%;
+  width: 3.5rem;
+  height: 3.5rem;
+  transform: translateY(-50%);
+}
+
+.match-selection .tournament-finished .name-container {
+  font-size: 3rem;
 }
