--- a/frontend/src/main/js/components/player-selection.css
+++ b/frontend/src/main/js/components/player-selection.css
@@ -19,14 +19,19 @@
 
 .player-selection .player.marked .player-icon {
   box-sizing: border-box;
-  border: 1vw solid #4EB4F9;
+  padding: 1%;
+  background-color: #4EB4F9;
+}
+
+.player-selection .player.marked .player-icon .player-image {
+  background-color: white;
 }
 
 .player-selection .player .marked-container {
   display: none;
-  height: 10vw;
-  width: 10vw;
-  margin: 0 0 -10vw -10vw;
+  height: auto;
+  width: 9%;
+  margin: 0 0 -9% -9%;
   float: left;
   position: relative;
 }
@@ -36,11 +41,10 @@
 }
 
 .player-selection .player .marked-container .corner {
-  position: absolute;
-  width: 0;
+  width: 100%;
   height: 0;
-  border-top: 10vw solid #4EB4F9;
-  border-left: 10vw solid transparent;
+  padding: 50% 0;
+  background: linear-gradient(to top right, rgba(0,0,0,0.01) 0%, rgba(0,0,0,0.01) 50%, #4EB4F9 50%, #4EB4F9 100%);
 }
 
 .player-selection .player .marked-container .material-icons {
@@ -63,6 +67,11 @@
   .player-selection .player-icon, .player-selection .letter {
     width: 14%;
     margin: 0 0 3% 5%;
+  }
+
+  .player-selection .player .marked-container {
+    width: 6%;
+    margin: 0 0 -6% -6%;
   }
 }
 
