Improved team-icon styling

--- a/frontend/src/main/js/tournament/pages/tournament-tree.css
+++ b/frontend/src/main/js/tournament/pages/tournament-tree.css
@@ -118,7 +118,7 @@
   max-width: 100%;
   position: relative;
   height: 40%;
-  padding-left: 2rem;
+  padding-left: 2.3em;
   display: inline-block;
 }
 
@@ -131,8 +131,8 @@
   position: absolute;
   left: 0;
   top: 50%;
-  width: 2rem;
-  height: 1.7rem;
+  width: 2em;
+  height: 1.7em;
   transform: translateY(-50%);
 }
 
