--- a/frontend/src/main/js/tournament/pages/tournament-tree.css
+++ b/frontend/src/main/js/tournament/pages/tournament-tree.css
@@ -1,3 +1,7 @@
+.ranked {
+  height: 100vh !important;
+}
+
 .tournament-tree {
   width: 100%;
   height: 100%;
@@ -49,6 +53,10 @@
   text-align: center;
   position: relative;
   height: 10vh;
+}
+
+.tournament-match.spare {
+  visibility: hidden;
 }
 
 .tournament-match::after {
@@ -125,7 +133,6 @@
 .tournament-match .team-name.winner {
   font-weight: 700;
 }
-
 
 .tournament-match .team-name .image-container {
   position: absolute;
