--- a/frontend/src/main/js/statistics/pages/profile.css
+++ b/frontend/src/main/js/statistics/pages/profile.css
@@ -1,19 +1,40 @@
 .profile {
+  padding-top: 8rem;
+  --box-count: 3;
+  --box-margin: 2rem;
+  --box-width: calc((80vw - (var(--box-margin) * (var(--box-count) * 2))) / var(--box-count));
+}
 
+.box {
+  width: var(--box-width);
+  margin: 0 var(--box-margin);
+  display: inline-block;
+  text-align: center;
+  vertical-align: top;
+}
+
+.group {
+  margin-bottom: 4rem;
+  width: 100%;
+  display: inline-block;
+  box-sizing: border-box;
 }
 
 .heading {
-
+  font-size: 1.6rem;
+  font-weight: 200;
+  margin: 0 0 0.6rem var(--box-margin);
 }
 
 .metric {
-
+  text-align: center;
+  display: inline-block;
 }
 
 .metric .value {
-
+  font-size: 1.4rem;
 }
 
 .metric .label {
-
+  font-size: 0.8rem;
 }
