Fixed frontend bugs

--- a/frontend/src/main/js/game/pages/match.css
+++ b/frontend/src/main/js/game/pages/match.css
@@ -41,7 +41,7 @@
 .match .won-sets-count {
   position: absolute;
   width: 100%;
-  top: 3rem;
+  top: 4%;
   text-align: center;
   font-size: 2rem;
 }
