Implemented profile pages into interactive board

--- a/frontend/src/main/js/statistics/pages/profile-selection.css
+++ b/frontend/src/main/js/statistics/pages/profile-selection.css
@@ -3,9 +3,12 @@
 }
 
 .profile-selection .player-list {
-  padding: 8rem 0 2rem 0;
   width: 100%;
   text-align: center;
+}
+
+.profile-selection.standalone .player-list {
+  padding: 8rem 0 2rem 0;
 }
 
 .profile-selection .player {
